--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Slide Guys Booking</h1>
-        <p>Select a unit and date to book. One unit per day, no cancellations or reschedules.</p>
+        <p>Select a unit and the date you would like to reserve. No cancellations. Rescheduling is subject to availability.</p>
         <form id="booking-form">
             <label for="unit">Choose your unit:</label>
             <select id="unit" name="unit">
