--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
         <div id="confirmation"></div>
     </div>
     <script src="script.js"></script>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script>
+  emailjs.init("PXm_wNk9aIao8Hlpp");
+</script>
 </body>
 </html>
