--- a/index.html
+++ b/index.html
@@ -31,5 +31,9 @@
 <script>
   emailjs.init("PXm_wNk9aIao8Hlpp");
 </script>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script>
+  emailjs.init("PXm_wNk9aIao8Hlpp");
+</script>
 </body>
 </html>
