--- a/index.html
+++ b/index.html
@@ -10,27 +10,30 @@
     <div class="container">
         <h1>Slide Guys Booking</h1>
         <p>Select a unit and the date you would like to reserve. No cancellations. Rescheduling is subject to availability.</p>
-        <form id="booking-form">
-            <label for="unit">Choose your unit:</label>
-            <select id="unit" name="unit">
-                <option value="Unit 1">Unit 1</option>
-                <option value="Unit 2">Unit 2</option>
-                <option value="Unit 3">Unit 3</option>
-                <option value="Unit 4">Unit 4</option>
-                <option value="Unit 5">Unit 5</option>
-                <!-- Add additional unit options up to 20 as needed -->
-            </select>
-            <label for="date">Choose a date:</label>
-            <input type="date" id="date" name="date" required>
-            <button type="submit">Book</button>
-        </form>
+        
         <div id="confirmation"></div>
     </div>
     <script src="script.js"></script>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script>
   emailjs.init("PXm_wNk9aIao8Hlpp");
-</script>
+</script><form id="booking-form">
+  <input type="text" name="name" placeholder="Name" required />
+  <input type="tel" name="phone" placeholder="Phone Number" required />
+  <input type="email" name="email" placeholder="Email Address" required />
+  <input type="text" name="address" placeholder="Address" required />
+
+  <select name="unit" required>
+    <option value="">Select a Unit</option>
+    <option value="Unit 1">Unit 1</option>
+    <option value="Unit 2">Unit 2</option>
+    <!-- Add more units as needed -->
+  </select>
+
+  <input type="date" name="date" required />
+
+  <button type="submit">Reserve</button>
+</form>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script>
   emailjs.init("PXm_wNk9aIao8Hlpp");
