--- a/index.html
+++ b/index.html
@@ -1,46 +1,147 @@
-<script>
-  function sendBookingEmail() {
-    const name = document.getElementById("name").value;
-    const phone = document.getElementById("phone").value;
-    const email = document.getElementById("email").value;
-    const address = document.getElementById("address").value;
-    const unit = document.getElementById("unit").value;
-    const date = document.getElementById("date").value;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Slide Guys Booking</title>
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <script>
+    (function(){
+      emailjs.init("PXm_wNk9aIao8Hlpp");
+    })();
+  </script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      background-color: #f7f7f7;
+      color: #333;
+    }
+    .container {
+      max-width: 500px;
+      margin: auto;
+      background: white;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    h2 {
+      color: #1b6ec2;
+      text-align: center;
+    }
+    label {
+      font-weight: bold;
+      display: block;
+      margin-top: 15px;
+    }
+    input, select {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+    button {
+      margin-top: 20px;
+      width: 100%;
+      background-color: #1b6ec2;
+      color: white;
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #155ba1;
+    }
+    .logo {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .logo img {
+      width: 200px;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="logo">
+      <img src="https://chat.openai.com/share/logo-slide-guys.png" alt="Slide Guys Logo">
+    </div>
+    <h2>Slide Guys Booking</h2>
+    <form id="booking-form" onsubmit="return sendBookingEmail();">
+      <label for="name">Name</label>
+      <input type="text" id="name" required>
 
-    // Full data for admin
-    const adminParams = {
-      name: name,
-      phone: phone,
-      email: email,
-      address: address,
-      unit: unit,
-      date: date
-    };
+      <label for="phone">Phone</label>
+      <input type="text" id="phone" required>
 
-    // Shorter data for customer
-    const customerParams = {
-      email: email,
-      unit: unit,
-      date: date
-    };
+      <label for="email">Email</label>
+      <input type="email" id="email" required>
 
-    // Send to Admin
-    emailjs.send('service_1zxrd0j', 'template_6z2dcsj', adminParams)
-      .then(() => {
-        // Then send to Customer
-        emailjs.send('service_1zxrd0j', 'template_nqep0gt', customerParams)
-          .then(() => {
-            alert("Thanks! Your booking is confirmed. A confirmation email has been sent.");
-            document.getElementById("booking-form").reset();
-          }, (error) => {
-            console.error('Customer email error:', error);
-            alert("Booking confirmed, but there was an issue sending the email to the customer.");
-          });
-      }, (error) => {
-        console.error('Admin email error:', error);
-        alert("There was a problem sending the booking to admin.");
-      });
+      <label for="address">Address</label>
+      <input type="text" id="address" required>
 
-    return false; // Prevent form from submitting
-  }
-</script>
+      <label for="unit">Select Unit</label>
+      <select id="unit" required>
+        <option value="">Choose a unit</option>
+        <option value="Unit 1">Unit 1</option>
+        <option value="Unit 2">Unit 2</option>
+        <option value="Unit 3">Unit 3</option>
+        <!-- Add more units if needed -->
+      </select>
+
+      <label for="date">Select Date</label>
+      <input type="date" id="date" required>
+
+      <button type="submit">Book Now</button>
+    </form>
+  </div>
+
+  <script>
+    function sendBookingEmail() {
+      const name = document.getElementById("name").value;
+      const phone = document.getElementById("phone").value;
+      const email = document.getElementById("email").value;
+      const address = document.getElementById("address").value;
+      const unit = document.getElementById("unit").value;
+      const date = document.getElementById("date").value;
+
+      const adminParams = {
+        name: name,
+        phone: phone,
+        email: email,
+        address: address,
+        unit: unit,
+        date: date
+      };
+
+      const customerParams = {
+        email: email,
+        unit: unit,
+        date: date
+      };
+
+      // Send to admin
+      emailjs.send('service_1zxrd0j', 'template_6z2dcsj', adminParams)
+        .then(() => {
+          // Then send to customer
+          emailjs.send('service_1zxrd0j', 'template_nqep0gt', customerParams)
+            .then(() => {
+              alert("Thanks! Your booking is confirmed. A confirmation email has been sent.");
+              document.getElementById("booking-form").reset();
+            }, (error) => {
+              console.error('Customer email error:', error);
+              alert("Booking confirmed, but there was an issue sending the email to the customer.");
+            });
+        }, (error) => {
+          console.error('Admin email error:', error);
+          alert("There was a problem sending the booking to admin.");
+        });
+
+      return false;
+    }
+  </script>
+</body>
+</html>
