--- a/index.html
+++ b/index.html
@@ -1,114 +1,95 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Slide Guys Booking</title>
   <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-  <script>
-    (function(){
-      emailjs.init("PXm_wNk9aIao8Hlpp");
-    })();
-  </script>
   <style>
     body {
       font-family: Arial, sans-serif;
+      background-color: #f2f2f2;
+      text-align: center;
       padding: 20px;
-      background-color: #f7f7f7;
-      color: #333;
     }
     .container {
-      max-width: 500px;
-      margin: auto;
-      background: white;
+      background-color: white;
+      border-radius: 10px;
       padding: 30px;
-      border-radius: 12px;
+      max-width: 800px;
+      margin: auto;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    h2 {
-      color: #1b6ec2;
-      text-align: center;
-    }
-    label {
-      font-weight: bold;
-      display: block;
-      margin-top: 15px;
+    h1 {
+      color: #2c3e50;
     }
     input, select {
-      width: 100%;
-      padding: 10px;
-      margin-top: 5px;
+      padding: 12px;
+      margin: 8px;
+      width: 95%;
+      max-width: 500px;
+      border-radius: 6px;
       border: 1px solid #ccc;
-      border-radius: 8px;
+      font-size: 16px;
     }
     button {
-      margin-top: 20px;
+      padding: 14px;
+      margin-top: 10px;
       width: 100%;
-      background-color: #1b6ec2;
+      background-color: #2980b9;
       color: white;
-      padding: 12px;
+      font-size: 18px;
       border: none;
-      border-radius: 8px;
-      font-size: 16px;
+      border-radius: 6px;
       cursor: pointer;
     }
     button:hover {
-      background-color: #155ba1;
+      background-color: #3498db;
     }
-    .logo {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .logo img {
+    img.logo {
       width: 200px;
+      margin-bottom: 20px;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="logo">
-      <img src="https://chat.openai.com/share/logo-slide-guys.png" alt="Slide Guys Logo">
-    </div>
-    <h2>Slide Guys Booking</h2>
-    <form id="booking-form" onsubmit="return sendBookingEmail();">
-      <label for="name">Name</label>
-      <input type="text" id="name" required>
-
-      <label for="phone">Phone</label>
-      <input type="text" id="phone" required>
-
-      <label for="email">Email</label>
-      <input type="email" id="email" required>
-
-      <label for="address">Address</label>
-      <input type="text" id="address" required>
-
-      <label for="unit">Select Unit</label>
+    <img src="https://slideguys-calendar.vercel.app/logo.png" alt="Slide Guys Logo" class="logo" />
+    <h1>Slide Guys Booking</h1>
+    <p>Select a unit and the date you would like to reserve. No cancellations. Rescheduling is subject to availability.</p>
+    <form id="booking-form">
+      <input type="text" id="name" placeholder="Name" required />
+      <input type="tel" id="phone" placeholder="Phone Number" required />
+      <input type="email" id="email" placeholder="Email Address" required />
+      <input type="text" id="address" placeholder="Address" required />
       <select id="unit" required>
-        <option value="">Choose a unit</option>
+        <option value="" disabled selected>Select a Unit</option>
         <option value="Unit 1">Unit 1</option>
         <option value="Unit 2">Unit 2</option>
         <option value="Unit 3">Unit 3</option>
-        <!-- Add more units if needed -->
+        <!-- Add more units as needed -->
       </select>
-
-      <label for="date">Select Date</label>
-      <input type="date" id="date" required>
-
-      <button type="submit">Book Now</button>
+      <input type="date" id="date" required />
+      <button type="submit">Reserve</button>
     </form>
   </div>
 
   <script>
-    function sendBookingEmail() {
-      const name = document.getElementById("name").value;
-      const phone = document.getElementById("phone").value;
-      const email = document.getElementById("email").value;
-      const address = document.getElementById("address").value;
-      const unit = document.getElementById("unit").value;
-      const date = document.getElementById("date").value;
+    (function(){
+      emailjs.init("PXm_wNk9aIao8Hlpp");
+    })();
 
-      const adminParams = {
+    document.getElementById('booking-form').addEventListener('submit', function(e) {
+      e.preventDefault();
+
+      const name = document.getElementById('name').value;
+      const phone = document.getElementById('phone').value;
+      const email = document.getElementById('email').value;
+      const address = document.getElementById('address').value;
+      const unit = document.getElementById('unit').value;
+      const date = document.getElementById('date').value;
+
+      const adminTemplateParams = {
         name: name,
         phone: phone,
         email: email,
@@ -117,31 +98,30 @@
         date: date
       };
 
-      const customerParams = {
+      const customerTemplateParams = {
         email: email,
         unit: unit,
         date: date
       };
 
-      // Send to admin
-      emailjs.send('service_1zxrd0j', 'template_6z2dcsj', adminParams)
+      // Send to admin using correct template
+      emailjs.send('service_1zxrd0j', 'template_6z2dcsj', adminTemplateParams)
         .then(() => {
           // Then send to customer
-          emailjs.send('service_1zxrd0j', 'template_nqep0gt', customerParams)
+          emailjs.send('service_1zxrd0j', 'template_nqep0gt', customerTemplateParams)
             .then(() => {
               alert("Thanks! Your booking is confirmed. A confirmation email has been sent.");
               document.getElementById("booking-form").reset();
             }, (error) => {
               console.error('Customer email error:', error);
-              alert("Booking confirmed, but there was an issue sending the email to the customer.");
+              alert("Booking confirmed, but there was an issue sending the confirmation email.");
             });
         }, (error) => {
           console.error('Admin email error:', error);
           alert("There was a problem sending the booking to admin.");
         });
-
-      return false;
-    }
+    });
   </script>
 </body>
 </html>
+
