--- a/index.html
+++ b/index.html
@@ -4,75 +4,123 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Slide Guys Booking</title>
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f2f2f2;
+      text-align: center;
+      padding: 20px;
+    }
+    .container {
+      background-color: white;
+      border-radius: 10px;
+      padding: 30px;
+      max-width: 800px;
+      margin: auto;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    h1 {
+      color: #2c3e50;
+    }
+    input, select {
+      padding: 10px;
+      margin: 5px;
+      width: 180px;
+      max-width: 90%;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    button {
+      padding: 12px;
+      margin-top: 10px;
+      width: 95%;
+      background-color: #2980b9;
+      color: white;
+      font-size: 18px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #3498db;
+    }
+    img.logo {
+      width: 200px;
+      margin-bottom: 15px;
+    }
+  </style>
 </head>
-<body style="font-family: Arial, sans-serif; background: #f9f9f9; padding: 20px;">
-
-  <div style="max-width: 500px; margin: auto; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
-    <h2 style="text-align: center; color: #1b6ec2;">Slide Guys Booking</h2>
-    <p style="text-align: center;">One unit per day. No cancellations. Rescheduling subject to availability.</p>
-    
+<body>
+  <div class="container">
+    <img src="https://slideguys-calendar.vercel.app/logo.png" alt="Slide Guys Logo" class="logo" />
+    <h1>Slide Guys Booking</h1>
+    <p>Select a unit and the date you would like to reserve. No cancellations. Rescheduling is subject to availability.</p>
     <form id="booking-form">
-      <label>Name:</label><br />
-      <input type="text" name="name" required style="width: 100%; padding: 10px; margin-bottom: 10px;" /><br />
-
-      <label>Phone:</label><br />
-      <input type="tel" name="phone" required style="width: 100%; padding: 10px; margin-bottom: 10px;" /><br />
-
-      <label>Email:</label><br />
-      <input type="email" name="email" required style="width: 100%; padding: 10px; margin-bottom: 10px;" /><br />
-
-      <label>Address:</label><br />
-      <input type="text" name="address" required style="width: 100%; padding: 10px; margin-bottom: 10px;" /><br />
-
-      <label>Unit:</label><br />
-      <input type="text" name="unit" required style="width: 100%; padding: 10px; margin-bottom: 10px;" /><br />
-
-      <label>Date:</label><br />
-      <input type="date" name="date" required style="width: 100%; padding: 10px; margin-bottom: 20px;" /><br />
-
-      <button type="submit" style="width: 100%; background-color: #1b6ec2; color: white; padding: 12px; border: none; border-radius: 5px; font-size: 16px;">Book Now</button>
+      <input type="text" id="name" placeholder="Name" required />
+      <input type="tel" id="phone" placeholder="Phone Number" required />
+      <input type="email" id="email" placeholder="Email Address" required />
+      <input type="text" id="address" placeholder="Address" required />
+      <select id="unit" required>
+        <option value="" disabled selected>Select a Unit</option>
+        <option value="Unit 1">Unit 1</option>
+        <option value="Unit 2">Unit 2</option>
+        <option value="Unit 3">Unit 3</option>
+        <!-- Add up to Unit 20 as needed -->
+      </select>
+      <input type="date" id="date" required />
+      <button type="submit">Reserve</button>
     </form>
-
-    <p id="response" style="text-align: center; margin-top: 20px;"></p>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
-    (function () {
+    (function(){
       emailjs.init("PXm_wNk9aIao8Hlpp");
-
-      document.getElementById("booking-form").addEventListener("submit", function (e) {
-        e.preventDefault();
-
-        const form = e.target;
-        const formData = new FormData(form);
-        const customerEmail = formData.get("email");
-
-        // Send to Admin
-        emailjs.send("service_1zxrd0j", "template_6z2dcsj", {
-          name: formData.get("name"),
-          phone: formData.get("phone"),
-          email: customerEmail,
-          address: formData.get("address"),
-          unit: formData.get("unit"),
-          date: formData.get("date")
-        }).then(() => {
-          // Then send to Customer
-          return emailjs.send("service_1zxrd0j", "template_nqep0gt", {
-            name: formData.get("name"),
-            email: customerEmail,
-            unit: formData.get("unit"),
-            date: formData.get("date")
-          });
-        }).then(() => {
-          document.getElementById("response").innerText = "Booking submitted successfully!";
-          form.reset();
-        }).catch((error) => {
-          console.error("Error:", error);
-          document.getElementById("response").innerText = "There was an error sending your booking. Please try again.";
-        });
-      });
     })();
+
+    document.getElementById('booking-form').addEventListener('submit', function(e) {
+      e.preventDefault();
+
+      const name = document.getElementById('name').value;
+      const phone = document.getElementById('phone').value;
+      const email = document.getElementById('email').value;
+      const address = document.getElementById('address').value;
+      const unit = document.getElementById('unit').value;
+      const date = document.getElementById('date').value;
+
+      const adminParams = {
+        name: name,
+        phone: phone,
+        email: email,
+        address: address,
+        unit: unit,
+        date: date
+      };
+
+      const customerParams = {
+        name: name,
+        email: email,
+        unit: unit,
+        date: date
+      };
+
+      // First send to admin
+      emailjs.send('service_1zxrd0j', 'template_6z2dcsj', adminParams)
+        .then(() => {
+          // Then send to customer
+          emailjs.send('service_1zxrd0j', 'template_nqep0gt', customerParams)
+            .then(() => {
+              alert("Thanks! Your booking is confirmed. A confirmation email has been sent.");
+              document.getElementById("booking-form").reset();
+            }, (error) => {
+              console.error('Customer email error:', error);
+              alert("Booking confirmed, but there was an issue sending the confirmation email to the customer.");
+            });
+        }, (error) => {
+          console.error('Admin email error:', error);
+          alert("There was a problem sending the booking details to admin.");
+        });
+    });
   </script>
 </body>
 </html>
